--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                  <div class="p-img">
                 <img class=" portfolio-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"/>
                        <div class="middle">
-                    <div class="text"><a href="http://43.206.149.185:80">SOCIAL MEDIA APP(Using node.js)</a></div>
+                    <div class="text"><a href="http://18.183.27.240:9000">TINDOG APP(Using html,css,bootstrap)</a></div>
                 </div>
             </div>
                  <div class="p-img">
