--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
         <section id="education">
  <h1 class="section-heading mb75px">
-                <span><i class="fa-solid fa-book-open-cover"></i></span>
+                <span><i class="fa-solid fa-graduation-cap"></i></span>
                 <span> EDUCATION</span>
             </h1>
             <div class="qualification">
@@ -371,7 +371,7 @@
         <section id="portfolio">
               <h1 class="section-heading mb75px">
                 <span><i class="fa-solid fa-user"></i></span>
-                <span> PROJECTS </span>
+                <span> PROJECTS [Click on the cards to view the project]</span>
             </h1>
             <div class="project-display">
          
@@ -391,19 +391,19 @@
                  <div class="p-img">
                 <img class=" portfolio-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"/>
                        <div class="middle">
-                    <div class="text"><a href="http://52.199.201.190:4000">Static music-player app(Using HTML & CSS)</a></div>
+                    <div class="text"><a href="https://musicplayer.manojdesai.tech">Static music-player app(Using HTML & CSS)</a></div>
                 </div>
             </div>
                  <div class="p-img">
                 <img class=" portfolio-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"/>
                        <div class="middle">
-                    <div class="text"><a href="http://18.183.27.240:9000">TINDOG APP(Using html,css,bootstrap)</a></div>
+                    <div class="text"><a href="http://tindog.manojdesai.tech">TINDOG APP(Using html,css,bootstrap)</a></div>
                 </div>
             </div>
                  <div class="p-img">
                 <img class=" portfolio-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png"/>
                        <div class="middle">
-                    <div class="text"><a href="http://43.206.149.185:80">SOCIAL MEDIA APP(Using node.js)</a></div>
+                    <div class="text"><a href="https://drumkit.manojdesai.tech">DRUM-KIT(Using HTML,CSS,JS)</a></div>
                 </div>
             </div>
                  <div class="p-img">
