--- a/index.html
+++ b/index.html
@@ -379,13 +379,13 @@
                 
                 <img class="portfolio-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"/>
                 <div class="middle">
-                    <div class="text"><a href="http://43.206.149.185:80">SOCIAL MEDIA APP(Using node.js)</a></div>
+                    <div class="text"><a href="http://43.207.169.160/">SOCIAL MEDIA APP(Using node.js)</a></div>
                 </div>
             </div>
                  <div class="p-img">
                 <img class=" portfolio-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png"/>
                        <div class="middle">
-                    <div class="text"><a href="http://13.231.131.202:80">KEEPER APP(Using React.js)</a></div>
+                    <div class="text"><a href="http://18.182.29.91/">KEEPER APP(Using React.js)</a></div>
                 </div>
             </div>
                  <div class="p-img">
